docker/data/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_inbound
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15000
    listener_filters:
      - name: envoy.filters.listener.original_dst
        typed_config: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
            - name: mylog
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /home/sidecar/envoy_access_inbound.log
          route_config:
            name: myroute
            virtual_hosts:
            - name: myservice
              domains: ["*"]
              routes:
                match:
                  prefix: "/"
                route:
                  cluster: cluster-default
          http_filters:
            - name: envoy.filters.http.wasm
              typed_config:
                "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                value:
                  config:
                    vm_config:
                      runtime: "envoy.wasm.runtime.v8"
                      code:
                        local:
                          filename: "/home/sidecar/inbound_filter.wasm"
            - name: envoy.filters.http.router
  - name: listener_outbound
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15001
    listener_filters:
      - name: envoy.filters.listener.original_dst
        typed_config: {}
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
                - name: mylog
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /home/sidecar/envoy_access_outbound.log
              route_config:
                name: myroute
                virtual_hosts:
                  - name: myservice
                    domains: ["*"]
                    routes:
                      match:
                        prefix: "/"
                      route:
                        cluster: cluster-default
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/home/sidecar/outbound_filter.wasm"
                - name: envoy.filters.http.router
  clusters:
  - name: cluster-default
    connect_timeout: 2s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
